# halo2-rln

./: Cargo.toml  README.md
benches/: full.rs  merkle.rs
src/: circuit.rs  client.rs  gadget.rs  hash_to_field.rs  keys.rs  lib.rs  merkle.rs  poseidon.rs  proof.rs  utils.rs
src/gadget/: merkle.rs  poseidon.rs  rln.rs  swap.rs
src/gadget/merkle/: chip.rs
src/gadget/poseidon/: pow5t3.rs
src/gadget/rln/: chip.rs
src/poseidon/: fp.rs  fq.rs  mds.rs  p128pow5t3.rs
src/primitives/: poseidon.rs
src/primitives/poseidon/: mds.rs  p128pow5t3.rs
